JavaScriptCore/kjs/grammar.y
@@ -1118,8 +1118,7 @@ DefaultClause:
 ;
 
 LabelledStatement:
-    IDENT ':' Statement                 { $3.m_node->pushLabel(*$1);
-                                          LabelNode* node = new LabelNode(GLOBAL_DATA, *$1, $3.m_node);
+    IDENT ':' Statement                 { LabelNode* node = new LabelNode(GLOBAL_DATA, *$1, $3.m_node);
                                           SET_EXCEPTION_LOCATION(node, @1.first_column, @2.last_column, @2.last_column);
                                           $$ = createNodeDeclarationInfo<StatementNode*>(node, $3.m_varDeclarations, $3.m_funcDeclarations, $3.m_features, $3.m_numConstants); }
 ;
